--- a/Animating Countdown/style.css
+++ b/Animating Countdown/style.css
@@ -26,3 +26,19 @@ h1 {
     border-radius: 28px;
     box-sizing: border-box;
 }
+
+#clock span:nth-child(1) {
+    background: #fa5559;
+}
+
+#clock span:nth-child(2) {
+    background: #26c2b9;
+}
+
+#clock span:nth-child(3) {
+    background: #f6bc58;
+}
+
+#clock span:nth-child(4) {
+    background: #2dcb74;
+}
