--- a/Animating Countdown/style.css
+++ b/Animating Countdown/style.css
@@ -42,3 +42,21 @@ h1 {
 #clock span:nth-child(4) {
     background: #2dcb74;
 }
+
+#clock::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+#units span {
+    float: left;
+    width: 25%;
+    text-align: center;
+    margin-top: 30px;
+    color: #ddd;
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 2px;
+    text-shadow: 1px 1px 1px rgba(10, 10, 10, 0.7);
+}
