--- a/Date Search/main.css
+++ b/Date Search/main.css
@@ -1,3 +1,12 @@
+input[type=date].invaliddate {
+    border-color: red;
+}
+
+input {
+    border-radius: 5px;
+    border-width: 1px;
+}
+
 .hidden {
     display: none;
 }
