--- a/Date Search/main.css
+++ b/Date Search/main.css
@@ -2,6 +2,10 @@ input[type=date].invaliddate {
     border-color: red;
 }
 
+select.datesearch_invalidday {
+    border-color: red;
+}
+
 input {
     border-radius: 5px;
     border-width: 1px;
