--- a/Friidrettskalkulator/style.css
+++ b/Friidrettskalkulator/style.css
@@ -1,3 +1,52 @@
 .hidden {
     display: none;
 }
+
+body {
+    background: steelblue;
+    color: #fff;
+}
+
+/* Tooltip Styles */
+.tooltip {
+    position: relative;
+    background: rgba(0, 0, 0, 3);
+    padding:  5px 12px;
+    border-radius: 100%;
+    font-size: 20px;
+    cursor: help;
+}
+
+.tooltip::before, .tooltip::after {
+    position: absolute;
+    left: 50%;
+    opacity: 0;
+    transition: all ease 0.3;
+}
+
+.tooltip::before {
+    content: "";
+    border-width: 10px 8px 0 8px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.3) transparent transparent transparent;
+    margin-left: -8px;
+    top: -20px;
+}
+
+.tooltip::after {
+    content: attr(data-tooltip);
+    background: rgba(0, 0, 0, 0.3);
+    top: -20px;
+    font-size: 14px;
+    width: 320px;
+    margin-left: -160px;
+    padding: 14px;
+    border-radius: 10px;
+    color: #eee;
+    transform: translateY(-100%);
+}
+
+/* Hover effects */
+.tooltip:hover::before, .tooltip:hover::after {
+    opacity: 1;
+}
