--- a/Friidrettskalkulator/style.css
+++ b/Friidrettskalkulator/style.css
@@ -40,6 +40,10 @@ form input {
 form button {
     font-size: 16px;
 }
+.hint {
+    margin-top: 70px;
+    margin-bottom: 10px;
+}
 
 /* Tooltip Styles */
 .tooltip {
@@ -64,17 +68,17 @@ form button {
     border-style: solid;
     border-color: rgba(0, 0, 0, 0.3) transparent transparent transparent;
     margin-left: -8px;
-    top: -20px;
+    top: -10px;
 }
 
 .tooltip::after {
     content: attr(data-tooltip);
     background: rgba(0, 0, 0, 0.3);
-    top: -20px;
+    top: -10px;
     font-size: 14px;
-    width: 320px;
-    margin-left: -160px;
-    padding: 14px;
+    width: 180px;
+    margin-left: -25px;
+    padding: 10px;
     border-radius: 10px;
     color: #eee;
     transform: translateY(-100%);
