--- a/Friidrettskalkulator/style.css
+++ b/Friidrettskalkulator/style.css
@@ -30,7 +30,7 @@ label {
 }
 
 form input {
-    padding: 2px 2px 2px;
+    padding: 0;
     font-size: 16px;
     border: 0;
     color: #444;
@@ -39,11 +39,23 @@ form input {
 
 form button {
     font-size: 16px;
+    max-width: 100px;
+    margin-top: 5px;
+}
+
+form select {
+    max-width: 100px;
 }
 
 .hint {
     margin-top: 90px;
     margin-bottom: 10px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 5px;
 }
 
 /* Tooltip Styles */
