--- a/Friidrettskalkulator/style.css
+++ b/Friidrettskalkulator/style.css
@@ -101,3 +101,22 @@ form select {
 .tooltip:hover::before, .tooltip:hover::after {
     opacity: 1;
 }
+
+@media screen and (min-width: 380px) {
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    form button {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 480px) {
+    .grid {
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 620px) {
+    
+}
